# EPS

./: .env.example  .gitignore  CLAUDE.md  GOOGLE_SCRAPER_SETUP.md  IMPLEMENTACOES.md  README.md  RELATORIO.md  STATUS.md  desafio_config_git.txt  docker-compose.yml  package-lock.json  pyproject.toml  sample_app.py  sonarqube_integration.md
.claude/: settings.json
.claude/agents/: secops-reviewer.md
.claude/skills/code-review/: SKILL.md
.claude/skills/contributing/: SKILL.md
.cursor/agents/: secops-reviewer.md
.cursor/rules/: buscador-osint.mdc
.cursor/skills/: contributing
.github/workflows/: ci-quality.yml  security-gate.yml  validate-beat-persistence.yml
backend/: Dockerfile  QUEUE_ARCHITECTURE.md  auth.py  conftest.py  main.py  models.py  pdf_service.py  pyproject.toml  requirements.txt
backend/analysis/: inference.py  timeline.py
backend/api/: schemas.py
backend/audit/: logger.py
backend/core/: aggregator.py  cache.py  circuit_breaker.py  intent.py  registry.py  scraper_base.py
backend/evidence/: snapshot.py
backend/graph/: neo4j_export.py
backend/scrapers/: base.py
backend/scrapers/dodf/: scraper.py
backend/scrapers/dou/: scraper.py
backend/scrapers/google/: scraper.py
backend/scrapers/instagram/: scraper.py
backend/scrapers/jusbrasil/: scraper.py
backend/scrapers/mock/: scraper.py
backend/scrapers/wikipedia/: scraper.py
backend/src/: __init__.py
backend/src/core/: __init__.py  celery_app.py  config.py  vault.py
backend/src/queue/: __init__.py  base_task.py  beat_schedules.py  dlq.py  health.py  monitoring.py  retry.py  router.py  tasks.py
backend/storage/: minio_client.py
backend/tests/: conftest.py  test_engineering.py  test_search.py
backend/tests/integration/: conftest.py  test_beat_persistence_postgres.py  test_beat_schedule.py  test_celery_worker.py  test_dlq_real.py  test_health_redis.py  test_redis_persistence.py  test_vault.py
backend/tests/unit/: conftest.py  test_base_task.py  test_beat_scheduler.py  test_config.py  test_dlq.py  test_health.py  test_monitoring.py  test_retry.py  test_vault.py
backend/workers/: tasks.py
documentation/analysis/: Codigo_Gerado_por_IA_Claude_Code.md  PRINCE2_e_PMBOK_Sintese.md  Projeto_02_Buscador_OSINT_Analise.md
documentation/diagrams/: Diagramas_Buscador_OSINT.md
documentation/rag/: RAG_ARCHITECTURE.md
documentation/secops/: PLANNING.md  REPORT.md  pyproject.toml
documentation/secops/diagrams/: 01_fluxo_atividades.mmd  02_cronograma.mmd  03_git_history.mmd  04_pipeline_seguranca.mmd
documentation/secops/src/secops_onboarding/: __init__.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/docker/: entrypoint.sh  nginx.conf.template
frontend/docs/: architecture-overview.md  integration-flow-mock-vs-real.md
frontend/public/: index.html
frontend/src/: App.css  App.jsx  App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  errors.ts  health.test.ts  health.ts  mock-data.ts  runtime.ts  session.ts  types.ts
frontend/src/config/: integration-map.test.ts  integration-map.ts
frontend/src/design-system/: README.md
infra/nginx/: nginx.conf
infra/redis/: redis.conf
infra/tests/: test_redis_restart.sh
rag_module/: .env.example  README.md  docker-compose.yml  pyproject.toml
rag_module/src/: config.py  main.py
rag_module/src/api/v1/: health.py
rag_module/tests/: test_dummy.py
src/: __init__.py
