[project]
name = "buscador-osint-backend"
version = "0.1.0"
description = "Buscador OSINT Automatizado - Backend (Celery + Redis queue system)"
authors = [
    {name = "FCTE-UNB-EPS5 Group 1"}
]
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy-celery-beat>=0.8.4",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "hvac>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
    "safety>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (requires Redis)",
]
addopts = "--strict-markers -ra"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B", "A", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"src/queue/__init__.py" = ["A005"]
