[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "yabamiah",email = "viniciusmendes1019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.1,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.11,<0.16.0)"
]
