[project]
name = "secops-onboarding"
version = "0.1.0"
description = "SecOps Onboarding - Engenharia de Produto de Software (FGA0316) 2026.1"
authors = [
    {name = "Mauricio Machado Fernandes Filho"}
]
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "safety>=3.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B", "A", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src", "backend"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S106"]
"**/src/queue/__init__.py" = ["A005"]

[tool.bandit]
targets = ["src"]
